[gd_scene load_steps=17 format=3 uid="uid://dvhagijf6wqio"]

[ext_resource type="Texture2D" uid="uid://c63i5lq6fpubw" path="res://sprites/ui/borders.png" id="1_7bioe"]
[ext_resource type="Texture2D" uid="uid://bgg10f36g7y2p" path="res://sprites/ui/mock.png" id="2_xg4tp"]
[ext_resource type="Texture2D" uid="uid://cmpty37hi66gw" path="res://sprites/off.png" id="3_14l1i"]
[ext_resource type="FontFile" uid="uid://dnhnlb87v31pk" path="res://fonts/jetbrains mono/fonts/ttf/JetBrainsMono-Medium.ttf" id="3_in8po"]
[ext_resource type="FontFile" uid="uid://stpsp151thtd" path="res://fonts/ubuntu mono/UbuntuMono-Bold.ttf" id="3_k0n6d"]
[ext_resource type="Script" path="res://scripts/enter.gd" id="3_oqjfv"]
[ext_resource type="Texture2D" uid="uid://d3biwnygqhhf7" path="res://sprites/on.png" id="4_2xoke"]
[ext_resource type="Script" path="res://scripts/username.gd" id="4_pfvb5"]
[ext_resource type="Script" path="res://scripts/date.gd" id="4_t2a4h"]
[ext_resource type="Script" path="res://scripts/day.gd" id="6_wo8ad"]

[sub_resource type="LabelSettings" id="LabelSettings_2sgqu"]
font = ExtResource("3_in8po")
font_size = 41
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_8p1od"]
font = ExtResource("3_in8po")
font_size = 41

[sub_resource type="Theme" id="Theme_14i6j"]
default_font = ExtResource("3_k0n6d")
default_font_size = 67

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pnns6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0dsg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcs1y"]

[node name="App" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="BordersRect" type="TextureRect" parent="Background"]
offset_right = 1080.0
offset_bottom = 2220.0
texture = ExtResource("1_7bioe")

[node name="Mockup" type="TextureRect" parent="Background"]
visible = false
offset_right = 1080.0
offset_bottom = 2220.0
texture = ExtResource("2_xg4tp")

[node name="UI" type="Node2D" parent="."]

[node name="UsernameLabel" type="Label" parent="UI"]
offset_left = 65.0
offset_top = 114.0
offset_right = 435.0
offset_bottom = 189.0
text = "OS-user@Kono
"
label_settings = SubResource("LabelSettings_2sgqu")
script = ExtResource("4_pfvb5")

[node name="DayLabel" type="Label" parent="UI"]
offset_left = 697.0
offset_top = 279.0
offset_right = 1003.0
offset_bottom = 373.0
text = "mon-push"
label_settings = SubResource("LabelSettings_8p1od")
script = ExtResource("6_wo8ad")

[node name="DateLabel" type="Label" parent="UI"]
offset_left = 679.0
offset_top = 114.0
offset_right = 1022.0
offset_bottom = 173.0
text = "23-jan w03/52"
label_settings = SubResource("LabelSettings_2sgqu")
horizontal_alignment = 2
script = ExtResource("4_t2a4h")

[node name="TerminalLine" type="LineEdit" parent="UI"]
offset_left = 170.0
offset_top = 1243.0
offset_right = 953.0
offset_bottom = 1350.0
theme = SubResource("Theme_14i6j")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_k0n6d")
theme_override_font_sizes/font_size = 67
theme_override_styles/normal = SubResource("StyleBoxEmpty_pnns6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0dsg")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_lcs1y")
max_length = 22
context_menu_enabled = false
flat = true
caret_blink_interval = 0.45

[node name="Buttons" type="Node2D" parent="UI"]

[node name="EnterButton" type="TextureButton" parent="UI/Buttons"]
texture_filter = 1
offset_left = 939.0
offset_top = 437.0
offset_right = 1028.0
offset_bottom = 506.0
texture_normal = ExtResource("3_14l1i")
texture_pressed = ExtResource("4_2xoke")
ignore_texture_size = true
stretch_mode = 1
script = ExtResource("3_oqjfv")

[connection signal="send_day" from="UI/DateLabel" to="UI/DayLabel" method="_on_date_label_send_day"]
[connection signal="button_up" from="UI/Buttons/EnterButton" to="UI/Buttons/EnterButton" method="_on_button_up"]
[connection signal="update_name" from="UI/Buttons/EnterButton" to="UI/UsernameLabel" method="_on_enter_button_update_name"]
